--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <div class="image-container">
-            <img src="../images/relaxing-rain-blue.jpeg" alt="lightpink background">
+            <img src="images/relaxing-rain-blue.jpeg" alt="lightpink background">
         </div>
 
         <div class="text-container">
